test/error/ConstructorDuplicate.fu
public class Test
{
	public Test() {
	}
	public Test() { //ERROR: Duplicate constructor, already defined in line 3
	}
}
